...
  //       getIt.get<BottomSheetService>().queueBottomSheet(
  //           isModalDismissible: true,
  //           widget: BottomSheetMessageDisplayWidget(
  //             message: e.message.toString(),
  //           ));
  //     }
  //   } else if (result.startsWith("0x")) {
  //     await Navigator.of(context)
  //         .pushNamed(Routes.send, arguments: [result, null, null]);
  //   } else {
  //     final uri = ERC681URI.fromString(result);
  //     await Navigator.of(context).pushNamed(Routes.send,
  //         arguments: [uri.address, uri.amount, uri.asset]);
...
